<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="#fafafa"
	android:paddingLeft="5dp"
	android:paddingRight="5dp"
    android:orientation="vertical"
	android:id="@+id/lnl">

	<TextView
		android:id="@+id/txtTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="25dp"
		android:text="@string/registration"
		android:textColor="#2A2A2A"
		android:textSize="19dp"
		android:textStyle="bold"
	/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:weightSum="2"
		android:layout_marginTop="45dp">

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/first_name"
			android:textColorHint="#626262"
			android:textColor="#2A2A2A"
			android:imeOptions="actionNext"
			android:singleLine="true"
			android:layout_weight="1"
		/>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/last_name"
			android:textColorHint="#626262"
			android:textColor="#2A2A2A"
			android:imeOptions="actionNext"
			android:singleLine="true"
			android:layout_weight="1"
		/>

	</LinearLayout>
	
	<EditText
		android:id="@+id/edtRegEmail"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textEmailAddress"
		android:hint="@string/email_address"
		android:textColorHint="#626262"
		android:textColor="#2A2A2A"
		android:imeOptions="actionNext"
		android:singleLine="true"
	/>

	<EditText
		android:id="@+id/edtRegPw"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:hint="@string/password"
		android:textColorHint="#626262"
		android:textColor="#2A2A2A"
		android:imeOptions="actionNext"
		android:singleLine="true"
	/>

	<EditText
		android:id="@+id/edtRegPw2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:hint="@string/retype_password"
		android:textColorHint="#626262"
		android:textColor="#2A2A2A"
		android:imeOptions="actionDone"
		android:singleLine="true"
	/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#fafafa"
		android:layout_marginTop="40dp"
		android:layout_marginBottom="15dp"
		android:weightSum="2">

		<Button
			android:id="@+id/btnCancel"
			android:layout_width="match_parent"
			android:layout_height="37dp"
			android:text="@string/cancel"
			android:background="#FF4081"
			android:layout_weight="1"
		/>
		
		<Button
			android:id="@+id/btnReg"
			android:layout_width="match_parent"
			android:layout_height="37dp"
			android:text="@string/register"
			android:background="#FF4081"
			android:layout_marginLeft="15dp"
			android:layout_weight="1"
		/>

	</LinearLayout>

</LinearLayout>
