<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="#fafafa"
	android:paddingLeft="5dp"
	android:paddingRight="5dp"
    android:orientation="vertical">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="20dp"
		android:text="@string/changing_pw"
		android:textColor="#2A2A2A"
		android:textSize="19dp"
		android:textStyle="bold"
	/>

	<EditText
		android:id="@+id/edtOldPw"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:inputType="textPassword"
		android:hint="@string/old_pw"
		android:textColorHint="#626262"
		android:textColor="#2A2A2A"
		android:imeOptions="actionNext"
		android:singleLine="true"
	/>

	<EditText
		android:id="@+id/edtNewPw"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:hint="@string/new_pw"
		android:textColorHint="#626262"
		android:textColor="#2A2A2A"
		android:imeOptions="actionNext"
		android:singleLine="true"
	/>

	<EditText
		android:id="@+id/edtNewPw2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:hint="@string/retype_new_pw"
		android:textColorHint="#626262"
		android:textColor="#2A2A2A"
		android:imeOptions="actionDone"
		android:singleLine="true"
	/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#fafafa"
		android:layout_marginTop="40dp"
		android:layout_marginBottom="15dp"
		android:weightSum="2">

		<Button
			android:id="@+id/btnCancel"
			android:layout_width="match_parent"
			android:layout_height="37dp"
			android:text="@string/cancel"
			android:textColor="#fafafa"
			android:background="#FF4081"
			android:layout_weight="1"
		/>

		<Button
			android:id="@+id/btnDone"
			android:layout_width="match_parent"
			android:layout_height="37dp"
			android:text="@string/done"
			android:textColor="#fafafa"
			android:background="#FF4081"
			android:layout_marginLeft="15dp"
			android:layout_weight="1"
		/>

	</LinearLayout>

</LinearLayout>
