<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingLeft="25dp"
	android:paddingRight="25dp"
	android:background="#E91E63"
	android:gravity="center">

	<ImageView
		android:id="@+id/imgLogo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="100dp"
		android:src="@drawable/ic_encrypt"/>

	<EditText
		android:hint="@string/email_address"
		android:textColor="#FFFFFF"
		android:textColorHint="#fafafa"
		android:id="@+id/edtUname"
		android:singleLine="true"
		android:imeOptions="actionNext"
		android:backgroundTint="#FF4081"
		android:inputType="textEmailAddress"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		android:layout_marginTop="70dp"/>

	<EditText
		android:hint="@string/password"
		android:textColor="#Ffffff"
		android:textColorHint="#fafafa"
		android:id="@+id/edtPw"
		android:singleLine="true"
		android:imeOptions="actionGo"
		android:backgroundTint="#FF4081"
		android:inputType="textPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="invisible"/>

	<Button
		android:id="@+id/btnLogin"
		android:text="@string/login"
		android:gravity="center"
		android:textColor="#ffffff"
		android:layout_width="match_parent"
		android:layout_height="35dp"
		android:layout_marginTop="15dp"
		android:background="#FF4081"
		android:visibility="invisible"/>
	
	<TextView
		android:id="@+id/txtForgotPw"
		android:text=""
		android:gravity="center"
		android:textSize="11dp"
		android:textStyle="bold"
		android:textColor="#ffffff"
		android:layout_marginTop="15dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		/>

	<TextView
		android:id="@+id/txtReg"
		android:text="@string/register_now"
		android:gravity="center"
		android:textSize="11dp"
		android:textStyle="bold"
		android:textColor="#ffffff"
		android:layout_marginTop="200dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="invisible"/>

</LinearLayout>

